kubernetes/apps/network/traefik/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.35.15
spec:
  parentRefs:
    - name: traefik
      namespace: network
  hostnames:
    - dash.68cc.io
  rules:
    - backendRefs:
        - name: traefik
          port: 8080
